--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -123,6 +123,7 @@
                 android:orientation="horizontal">
 
                 <Button
+                    android:id="@+id/btn_server"
                     style="?android:attr/buttonBarButtonStyle"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
@@ -132,6 +133,7 @@
                     android:textSize="16sp" />
 
                 <Button
+                    android:id="@+id/btn_record"
                     style="?android:attr/buttonBarButtonStyle"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
