--- a/app/src/main/res/layout/item_conn.xml
+++ b/app/src/main/res/layout/item_conn.xml
@@ -12,6 +12,6 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingStart="16dp"
+        android:padding="8dp"
         android:text="@{vm.connIp}" />
 </layout>
