--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -45,7 +45,7 @@
                     android:layout_marginStart="16dp"
                     android:layout_marginTop="16dp"
                     android:layout_toStartOf="@id/space_center"
-                    android:clickable="true"
+                    android:onClick="@{vm.onWifiModeViewClick()}"
                     app:border_color="@color/colorAccent"
                     app:content_text="@string/wifi_mode_desc"
                     app:img_icon="@drawable/ic_wifi"
@@ -60,7 +60,7 @@
                     android:layout_marginEnd="16dp"
                     android:layout_marginTop="16dp"
                     android:layout_toEndOf="@id/space_center"
-                    android:clickable="true"
+                    android:onClick="@{vm.onHotspotModeViewClick()}"
                     app:border_color="@color/colorAccent"
                     app:content_text="@string/hotspot_mode_desc"
                     app:img_icon="@drawable/ic_hotspot"
@@ -82,10 +82,10 @@
                     android:layout_height="wrap_content"
                     android:foreground="?attr/selectableItemBackgroundBorderless"
                     android:onClick="@{vm.onImgRefreshIpClick()}"
-                    android:paddingBottom="8dp"
+                    android:paddingBottom="16dp"
                     android:paddingEnd="8dp"
                     android:paddingStart="16dp"
-                    android:paddingTop="8dp"
+                    android:paddingTop="16dp"
                     android:src="@drawable/ic_refresh" />
 
                 <TextView
@@ -119,25 +119,6 @@
                     android:textColor="@color/colorAccent" />
 
             </LinearLayout>
-
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="#FFF">
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentEnd="true"
-                    android:background="#FAFAFA"
-                    android:foreground="?attr/selectableItemBackground"
-                    android:onClick="@{vm.onTextViewRandomChangeIpClick()}"
-                    android:paddingBottom="8dp"
-                    android:paddingEnd="16dp"
-                    android:paddingStart="16dp"
-                    android:paddingTop="8dp"
-                    android:text="随机更换端口" />
-            </RelativeLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
